cmake_minimum_required(VERSION 3.16)

project(mask2cluster VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# TODO: add find_package(PCL REQUIRED)
# TODO: add find_package(Eigen3 REQUIRED)
# TODO: optionally add find_package(PDAL)
